--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="style.css" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<title>Document</title>
+	<title>Televideo</title>
 </head>
 <body>
 	<img id="screen" src="" />
