--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link href="style.css?v=2" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-title" content="Televideo">
+	<link rel="apple-touch-icon" href="icon.png">
+	<link rel="icon" type="image/png" href="icon.png">
 	<title>Televideo</title>
 </head>
 <body>
