--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="style.css?v=2" rel="stylesheet">
+	<link href="style.css?v=4" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="apple-mobile-web-app-title" content="Televideo">
@@ -24,6 +24,6 @@
 
 		<button id="go">vai</button>
 	</div>
-	<script src="script.js"></script>
+	<script src="script.js?v=4"></script>
 </body>
 </html>
