--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="style.css?v=5" rel="stylesheet">
+	<link href="style.css?v=6" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="apple-mobile-web-app-title" content="Televideo">
@@ -27,6 +27,9 @@
 		<div class="red sub-controls">
 			<button id="go">vai</button>
 		</div>
+	</div>
+	<div id="rotate">
+		<div id="rotate-text">Benvenuto in <b>Televideo</b>, per usare l'app, ruota il telefono.</div>
 	</div>
 	<script src="script.js?v=4"></script>
 </body>
