--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 	<div id="controls">
 		<div class="blue sub-controls">
 			<input type="number" id="channel" class="number" value="100" min="100" />
-			<button id="prevChannel" class="page-nav"><</button>
 			<button id="nextChannel" class="page-nav">></button>
+			<button id="prevChannel" class="page-nav"><</button>
 		</div>
 		<div class="green sub-controls">
-			<input type="number" id="page" class="number"  value="1" />
-			<button id="prevPage" class="page-nav"><</button>
+			<input type="number" id="page" class="number" value="1" min="1" />
 			<button id="nextPage" class="page-nav">></button>
+			<button id="prevPage" class="page-nav"><</button>
 		</div>
 		<div class="red sub-controls">
 			<button id="go">vai</button>
@@ -31,6 +31,6 @@
 	<div id="rotate">
 		<div id="rotate-text">Benvenuto in <b>Televideo</b>, per usare l'app, ruota il telefono.</div>
 	</div>
-	<script src="script.js?v=4"></script>
+	<script src="script.js?v=5"></script>
 </body>
 </html>
