--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="style.css?v=7" rel="stylesheet">
+	<link href="style.css?v=8" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="apple-mobile-web-app-title" content="Televideo">
@@ -12,17 +12,19 @@
 	<title>Televideo</title>
 </head>
 <body>
-	<img id="screen" src="" />
+	<div id="screen">
+		<img id="screen-img" />
+	</div>
 	<div id="controls">
 		<div class="blue sub-controls">
 			<input type="number" id="channel" class="number" value="100" min="100" />
-			<button id="nextChannel" class="page-nav">></button>
-			<button id="prevChannel" class="page-nav"><</button>
+			<button id="nextChannel">></button>
+			<button id="prevChannel"><</button>
 		</div>
 		<div class="green sub-controls">
 			<input type="number" id="page" class="number" value="1" min="1" />
-			<button id="nextPage" class="page-nav">></button>
-			<button id="prevPage" class="page-nav"><</button>
+			<button id="nextPage">></button>
+			<button id="prevPage"><</button>
 		</div>
 		<div class="red sub-controls">
 			<button id="go">vai</button>
@@ -31,6 +33,6 @@
 	<div id="rotate">
 		<div id="rotate-text">Benvenuto in <b>Televideo</b>, per usare l'app, ruota il telefono.</div>
 	</div>
-	<script src="script.js?v=5"></script>
+	<script src="script.js?v=6"></script>
 </body>
 </html>
